первоначальная версия фильтрация полигонов (пока только выпуклых)

--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,8 @@
     var should = chai.should();
   </script>
   <!-- bower:js -->
+  <script src="/other_components/polyk/polyk.js"></script>
+  <script src="/scripts/PolygonAlgs.js"></script>
   <!-- endbower -->
   <!-- include source files here... -->
   <!-- include spec files here... -->
