--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="mocha"></div>
   <script src="../bower_components/mocha/mocha.js"></script>
-  <script>mocha.setup('bdd');</script>
+  <script>mocha.setup({ui: 'bdd'});</script>
   <script src="../bower_components/chai/chai.js"></script>
   <script>
     var assert = chai.assert;
