--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,9 @@
     var should = chai.should();
   </script>
   <!-- bower:js -->
+  <script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
   <script src="/other_components/polyk/polyk.js"></script>
+  <script src="/bower_components/rbush/rbush.js"></script>
   <script src="/scripts/PolygonAlgs.js"></script>
   <!-- endbower -->
   <!-- include source files here... -->
