проверка покрытия несколькими полигонами, используется clipper.js. тормозит теперь жутко ....

--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
   <script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
   <script src="/other_components/polyk/polyk.js"></script>
   <script src="/bower_components/rbush/rbush.js"></script>
+  <script src="other_components/clipper/clipper_unminified.js"></script>
   <script src="/scripts/PolygonAlgs.js"></script>
   <!-- endbower -->
   <!-- include source files here... -->
