--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <!-- build:js scripts/main.js -->
     <script src="other_components/polyk/polyk.js"></script>
     <script src="other_components/clipper/clipper_unminified.js"></script>
+    <script src="scripts/performancenow-polyfill.js"></script>
     <script src="scripts/PolygonAlgs.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
