--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
   <script src="/other_components/polyk/polyk.js"></script>
   <script src="/bower_components/rbush/rbush.js"></script>
   <script src="other_components/clipper/clipper_unminified.js"></script>
+  <script src="scripts/performancenow-polyfill.js"></script>
   <script src="/scripts/PolygonAlgs.js"></script>
   <!-- endbower -->
   <!-- include source files here... -->
