оптимизация с использование дерева, которая не дала существенного ускорения

--- a/test/index.html
+++ b/test/index.html
@@ -26,8 +26,8 @@
   <!-- include source files here... -->
   <!-- include spec files here... -->
   <script src="spec/test.js"></script>
-  <script src="spec/performance-data.js"></script>
-  <script src="spec/performance-test.js"></script>
+  <!-- <script src="spec/performance-data.js"></script>
+  <script src="spec/performance-test.js"></script> -->
   <script>
     if (navigator.userAgent.indexOf('PhantomJS') === -1) {
       mocha.run();
