загрузка тестовых данных с сервера по параметру query string, пример
    http://localhost:9000/?file=/task1_example.geojson

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/purl/purl.js"></script>
     <script src="/bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="/bower_components/rbush/rbush.js"></script>
     <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
