--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
     <link rel="stylesheet" href="/bower_components/pure/pure.css" />
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -32,6 +33,14 @@
 
     <div class="toolbar">
       <div class="toolbar__item">
+          <a href="#input-filter" class="input-filter pure-button" title="Включить/отключить фильтрацию" >
+            <i class="fa fa-filter" aria-hidden="true"></i>
+             Фильтровать
+          </a>
+          <a href="#input-file" class="input-file pure-button" title="Загрузить JeoJSON из файла" >
+            <i class="fa fa-upload" aria-hidden="true"></i>
+             Загрузить
+          </a>
         <a href="#input-json-form" class="input-json pure-button" title="Ввести вручную JeoJSON" >
           <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
            GeoJSON
