--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,10 @@
     	</fieldset>
     </form>
 
+    <div class="input-file-container" >
+        <input type="file" id="input-file" name="input-file" />
+    </div>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
